RESOLVED FIXED118472
[BlackBerry] Block Zoom does not zoom in on narrow paragraphs properly
https://bugs.webkit.org/show_bug.cgi?id=118472
Summary [BlackBerry] Block Zoom does not zoom in on narrow paragraphs properly
Jacky Jiang
Reported 2013-07-08 08:04:20 PDT
JIRA 114653.
Attachments
Patch (3.25 KB, patch)
2013-07-08 08:27 PDT, Jacky Jiang
rwlbuis: review+
Jacky Jiang
Comment 1 2013-07-08 08:27:40 PDT
Rob Buis
Comment 2 2013-07-08 08:32:23 PDT
Comment on attachment 206248 [details] Patch LGTM.
Jacky Jiang
Comment 3 2013-07-08 08:41:16 PDT
Jacky Jiang
Comment 4 2013-07-08 08:42:30 PDT
Comment on attachment 206248 [details] Patch Fixed.
Note You need to log in before you can comment on or make changes to this bug.